deployment/vanguard-k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanguard-services
  labels:
    app: vanguard-services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vanguard-services
  template:
    metadata:
      labels:
        app: vanguard-services
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: vanguard-storage
        secret:
          secretName: vanguard-storage
      containers:
      - name: vanguard-services
        image: gcr.io/vanguard-255823/vanguard-services
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /__health
            port: 3000
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 200m
        volumeMounts:
          - name: vanguard-storage
            mountPath: "/app/secrets/storage"
---
apiVersion: v1
kind: Service
metadata:
  name: vanguard-services
spec:
  type: NodePort
  selector:
    app: vanguard-services
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
