deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vanguard-services
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: vanguard-ip
    networking.gke.io/managed-certificates: vanguard-certificate
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: wordpress
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: vanguard-services
          servicePort: 3000
      - path: /ui/*
        backend:
          serviceName: vanguard-services
          servicePort: 3000
